--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta>
     <title>Ateletico de Madrid</title>
 </head>
-<body style="background-color: red;">
-<h1 style="color: white;">🛠Páginas en construcción🛠</h1>
-<h2 style="color: white;">El mejor club del mundo</h2>
+<body>
+<h1>🛠Páginas en construcción🛠</h1>
+<h2>El mejor club del mundo</h2>
     
 </body>
 </html>
