--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="keywords" content="Ateltico de Madrid, Atletico,Fútbol, Fans, Seguidores, himno, afición, rojiblanco, Cívitas Metropolitano, Simeone, Entradas Cívitas Metropolitano, Tienda Atlético de Madrid, Rojiblancos, Colchoneros, Atlético de Madrid Femenino, Academia Atlético de Madrid.">
     <meta name="description" content=" Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
     <meta>
+    <link rel="stylesheet" href="css/sytle.css">
     <title>Ateletico de Madrid</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
 <h1>🛠Páginas en construcción🛠</h1>
