--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta>
     <link rel="stylesheet" href="css/sytle.css">
     <title>Ateletico de Madrid</title>
-    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+    <link rel="favicon" href="favicon.png" type="image/png">
 </head>
 <body>
 <h1>🛠Páginas en construcción🛠</h1>
