--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Ateltico de Madrid, Atletico,Fútbol, Fans, Seguidores, himno, afición, rojiblanco, Cívitas Metropolitano, Simeone, Entradas Cívitas Metropolitano, Tienda Atlético de Madrid, Rojiblancos, Colchoneros, Atlético de Madrid Femenino, Academia Atlético de Madrid.">
     <meta name="description" content=" Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
-    <meta>
+    <meta name="bot" content="index,follow">
+    <meta name="copyright" content="Sergio Ramos">
     <link rel="stylesheet" href="css/sytle.css">
     <title>Ateletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
+
 </head>
 <body>
-<h1>🛠Páginas en construcción🛠</h1>
-<h2>El mejor club del mundo</h2>
-    
+    <header>
+        <h1>Páginas en construcción</h1>
+        <nav>
+        </nav>
+    </header>
+    <main>
+        <h1>Páginas en construcción</h1>
+        <h2>El mejor club del mundo</h2>
+    </main>
+<footer>
+
+</footer>
 </body>
 </html>
