--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Ateltico de Madrid, Atletico,Fútbol, Fans, Seguidores, himno, afición, rojiblanco, Cívitas Metropolitano, Simeone, Entradas Cívitas Metropolitano, Tienda Atlético de Madrid, Rojiblancos, Colchoneros, Atlético de Madrid Femenino, Academia Atlético de Madrid.">
     <meta name="description" content=" Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
     <meta name="bot" content="index,follow">
+    <link rel="canonical" href="https://seeergiio.github.io/index.html">
     <meta name="copyright" content="Sergio Ramos">
     <link rel="stylesheet" href="css/sytle.css">
     <title>Ateletico de Madrid</title>
@@ -15,11 +16,14 @@
 <body>
     <header>
         <h1>Páginas en construcción</h1>
+        <div class="principal">
+            <img id = "foto-principal" src="img/estadio.jpg" alt="Es una foto aerea del estadio del atletico de madrid con un tifo enorme en las gradas que pone PASION">
+
+        </div>
         <nav>
         </nav>
     </header>
     <main>
-        <h1>Páginas en construcción</h1>
         <h2>El mejor club del mundo</h2>
     </main>
 <footer>
