--- a/index.html
+++ b/index.html
@@ -9,24 +9,35 @@
     <link rel="canonical" href="https://seeergiio.github.io/index.html">
     <meta name="copyright" content="Sergio Ramos">
     <link rel="stylesheet" href="css/sytle.css">
-    <title>Ateletico de Madrid</title>
+    <title>Atletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
 
 </head>
 <body>
-    <header>
-        <h1>Páginas en construcción</h1>
-        <div class="principal">
-            <img id = "foto-principal" src="img/estadio.jpg" alt="Es una foto aerea del estadio del atletico de madrid con un tifo enorme en las gradas que pone PASION">
-        </div>
-        <nav>
-        </nav>
-    </header>
-    <main>
-        <h2>El mejor club del mundo</h2>
-    </main>
-<footer>
 
-</footer>
+    <div class="contenedor">
+        <div class="overlay">
+        </div>
+        <header>
+            <nav class="navegacion">
+                <a href="">Inicio</a>
+                <a href="">Noticias</a>
+                <a href="">Partidos</a>
+                <a href="">Equipo Masculino</a>
+                <a href="">Equipo Femenino</a>
+                <a href="">Academia</a>
+            </nav>
+            <div class="contendor-inicio">
+                <h1>Club Atlético de Madrid</h1>
+                <p class="centrado">Otra forma de entender la vida</p>
+            </div>
+        </header>
+    </div>
+
+   
+    <footer>
+
+    </footer>
 </body>
+
 </html>
