--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="">Academia</a>
             </nav>
             <div class="contendor-inicio">
-                <h1>Club Atlético de Madrid</h1>
+                <h1>Club Atlético de Madrids</h1>
                 <p class="centrado">Otra forma de entender la vida</p>
             </div>
         </header>
