--- a/index.html
+++ b/index.html
@@ -17,21 +17,34 @@
 
     <div class="contenedor">
         <div class="overlay">
+
+            <header>
+                <audio src="audios/Himmo.mp3" autoplay loop></audio>
+                <nav class="navegacion">
+                    <img src="imagenes/logo-nav.png" alt="El escudo del Atletico de Madrid">
+                    <a href="">Inicio</a>
+                    <a href="">Noticias</a>
+                    <a href="">Partidos</a>
+                    <a href="">Equipo Masculino</a>
+                    <a href="">Equipo Femenino</a>
+                    <a href="">Academia</a>
+                </nav>
+                <div class="contenedor-nav">
+                    <p class="centrado">Otra forma de ver la vida</p>
+                    <h1>Club Atlético de Madrid</h1>
+                </div>
         </div>
-        <header>
-            <nav class="navegacion">
-                <a href="">Inicio</a>
-                <a href="">Noticias</a>
-                <a href="">Partidos</a>
-                <a href="">Equipo Masculino</a>
-                <a href="">Equipo Femenino</a>
-                <a href="">Academia</a>
-            </nav>
-            <div class="contendor-inicio">
-                <h1>Club Atlético de Madrid</h1>
-                <p class="centrado">Otra forma de entender la vida</p>
-            </div>
+ 
+        
         </header>
+        <main>
+
+            <section>
+            <h2>Noticas Actuales</h2>
+            </section>  
+
+        </main>
+
     </div>
 
    
