--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div class="overlay">
 
             <header>
-                <audio src="audios/Himmo.mp3" autoplay loop></audio>
                 <nav class="navegacion">
-                    <img src="imagenes/logo-nav.png" alt="El escudo del Atletico de Madrid">
+                    <img src="imagenes/logo-nav.webp" alt="El escudo del Atletico de Madrid" width="5%">
                     <a href="">Inicio</a>
                     <a href="">Noticias</a>
                     <a href="">Partidos</a>
@@ -30,7 +29,7 @@
                     <a href="">Academia</a>
                 </nav>
                 <div class="contenedor-nav">
-                    <p class="centrado">Otra forma de ver la vida</p>
+                    <p class="centrado-sub">Otra forma de ver la vida</p>
                     <h1>Club Atlético de Madrid</h1>
                 </div>
         </div>
@@ -54,3 +53,8 @@
 </body>
 
 </html>
+
+
+
+
+
