--- a/enlaces.html
+++ b/enlaces.html
@@ -20,28 +20,24 @@
 </head>
 <body>
 
-    <div class="contenedor-principal">
-        <div class="overlay-principal">
+    <div class="contenedor">
+        <div class="overlay">
 
             <header>
                 <nav class="navegacion">
-                    <a href="">Inicio</a>
+                    <a href="index.html">Inicio</a>
                     <a href="">Noticias</a>
                     <a href="">Partidos</a>
                     <a href="">Equipo Masculino</a>
                     <a href="">Equipo Femenino</a>
                     <a href="">Academia</a>
                 </nav>
-                <div class="contenedor-nav">
-                    <p class="centrado-sub">Otra forma de ver la vida</p>
-                    <h1>Club Atlético de Madrid</h1>
-                </div>
         </div>
         </header>
         <main>
 
             <section>
-            <h2>Noticas Actuales</h2>
+            <h2>Enlaces</h2>
             <p>asdasd</p>
             </section>  
             
@@ -71,8 +67,9 @@
                 </div>
                 <div class="footer-text-icons">
                     <i class="fa fa-paperclip"></i>
-                    <a href="enlaces.html" title="Ir a la pagina de enlaces"><p>Pagina de enlaces</p></a>
+                    <a href="index.html" title="Ir a la de inicio"><p>Pagina de inicio</p></a>
             </div>
+
             </div>
             &copy; Sergio Ramos Cordero 2024
         </footer>
