--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="bot" content="index,follow">
     <link rel="canonical" href="https://seeergiio.github.io/index.html">
     <meta name="copyright" content="Sergio Ramos">
-    <link rel="stylesheet" href="css/sytle.css">
+    <link rel="stylesheet" href="css/sytle.css"> 
     <title>Atletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,21 +16,18 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 
-
 </head>
 <body>
-
     <div class="contenedor-principal">
         <div class="overlay-principal">
 
             <header>
                 <nav class="navegacion">
-                    <a href="">Inicio</a>
-                    <a href="">Noticias</a>
-                    <a href="">Partidos</a>
-                    <a href="">Equipo Masculino</a>
-                    <a href="">Equipo Femenino</a>
-                    <a href="">Academia</a>
+                    <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
+                    <a href="partidos.html" title="Ir al apartador de partidos">Partidos</a>
+                    <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
+                    <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
+                    <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
                 </nav>
                 <div class="contenedor-nav">
                     <p class="centrado-sub">Otra forma de ver la vida</p>
