--- a/partidos.html
+++ b/partidos.html
@@ -31,50 +31,12 @@
                     <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
                     <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
                 </nav>
-                <h2 class="title-pag">Enlaces</h2>
+                <h2 class="title-pag">PROXIMAMENTE</h2>
         </div>
         </header>
         <main>
             <section>
                 <article>
-                    <div class="enlaces-general">
-                        <div class="pag-enlace">
-                            <h3>Fantashirts</h3>
-                            <a href="https://arrooyo110.github.io/" title="Ir a la pagina para comprar camisetas de futbol"><img src="imagenes/enlace1.webp" alt="Es una imagen de una paginas web para comprar camisetas"></a> 
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>El Universo</h3>
-                            <a href="https://rauulfdezz.github.io/" title="Ir a la pagina del universo"><img src="imagenes/enlace2.webp" alt="Es una imagen de una portada de paginas web que pone en grande universo"></a> 
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>FUNKOVERSE</h3>
-                            <a href="https://charlymb96.github.io/" title="Ir a la pagina de Funko Pops"><img src="imagenes/enlace3.webp" alt="Es una imagen de una paginas web de Funko Pops"></a> 
-
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>PlayMoverso</h3>
-                            <a href="https://adriansanchezsmr.github.io/" title="Ir a la de PlayMoverso"><img src="imagenes/enlace4.webp" alt="Es una imagen de una paginas web de Playmobils"></a> 
-
-                        </div>
-                    </div>
-                    <div class="enlaces-general">
-                        <div class="pag-enlace">
-                            <h3>Casa de apuestas</h3>
-                            <a href="https://maario30.github.io/" title="Ir a la pagina sobre las apuestas"><img src="imagenes/enlace5.webp" alt="Es una imagen de una paginas web de apuestas con un texto sobre como  ganar apostando y imagenes de tipos de apuesta"></a> 
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>RC CELTA</h3>
-                            <a href="https://victorgarv.github.io/" title="Ir a la pagina del celta"><img src="imagenes/enlace6.webp" alt="Es una imagen de una portada de una paginas sobre el "></a> 
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>PROXIMAMENTE</h3>
-
-                        </div>
-                        <div class="pag-enlace">
-                            <h3>PROXIMAMENTE</h3>
-
-                        </div>
-                    </div>
                 </article>
             </section>  
             
