--- a/historia/fundacion.html
+++ b/historia/fundacion.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Ateltico de Madrid, Atletico,Fútbol, Fans, Seguidores, himno, afición, rojiblanco, Cívitas Metropolitano, Simeone, Entradas Cívitas Metropolitano, Tienda Atlético de Madrid, Rojiblancos, Colchoneros, Atlético de Madrid Femenino, Academia Atlético de Madrid.">
-    <meta name="description" content="Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
+    <meta name="description" content=" Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
     <meta name="bot" content="index,follow">
     <link rel="canonical" href="https://seeergiio.github.io/index.html">
     <meta name="copyright" content="Sergio Ramos">
-    <meta property="og:title" content="Mi web sobre el Mejor Equipo del mundo">
-    <meta property="og:description" content="Toda la información actualizada del Club Atlético de Madrid como noticias, eventos, estadisticas y historia del Atletico de Madrid AUPA ATLETI!!">
-    <meta property="og:image" content="https://seeergiio.github.io/favicon.png">
-    <link rel="stylesheet" href="css/sytle.css"> 
-    <meta property="og:url" content="https://seeergiio.github.io">
-    <meta name="twitter:card" content="imagenes/twitter-3-svgrepo-com.svg">
-    <meta name="twitter:title" content="Mi web sobre el Mejor Equipo del mundo">
-    <meta name="twitter:description" content="Encuentra información sobre el mejor equipo del mundo">
-    <meta name="twitter:image" content="https://profevalentinperez.github.io/imagenes/html5.jpg">
+    <link rel="stylesheet" href="../css/sytle.css">
     <title>Atletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,30 +16,28 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 
+
 </head>
 <body>
-    <div class="contenedor-principal">
-        <div class="overlay-principal">
+
+    <div class="contenedor">
+        <div class="overlay">
 
             <header>
-                <nav class="navegacion">
+                <!-- <nav class="navegacion">
                     <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="historia/historia.html" title="Ir al apartador de partidos">Historia</a>
+                    <a href="partidos.html" title="Ir al apartador de partidos">Partidos</a>
                     <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
                     <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
                     <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
-                </nav>
-                <div class="contenedor-nav">
-                    <p class="centrado-sub">Otra forma de ver la vida</p>
-                    <h1>Club Atlético de Madrid</h1>
-                </div>
+                </nav> -->
+                <h2 class="title-pag">PROXIMAMENTE</h2>
         </div>
         </header>
         <main>
-
             <section>
-            <h2>Noticas Actuales</h2>
-            <p>asdasd</p>
+                <article>
+                </article>
             </section>  
             
         </main>
@@ -55,10 +45,10 @@
         <footer>
             <h2>Coraje y Corazón</h2>
             <div class="footer-icons">
-                <a href="https://x.com/Atleti" title="Ir al Twitter Oficial"><i class="fa fa-twitter"></a></i>
-                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir a la pagina de Facebook Oficial"><i class="fa fa-facebook"></a></i>
-                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram Oficial"><i class="fa fa-instagram"></i></a></i>
-                <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube Oficial"><i class="fa fa-youtube-play"></a></i>
+                <a href="https://x.com/Atleti" title="Ir al Twitter oficial del Atlético de Madrid"><i class="fa fa-twitter"></a></i>
+                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir al Facebbok oficial del Atlético de Madrid"><i class="fa fa-facebook"></a></i>
+                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram oficial del Atlético de Madrid"><i class="fa fa-instagram"></i></a></i>
+                <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube oficial del Atlético de Madrid"><i class="fa fa-youtube-play"></a></i>
             </div>
             <div class="footer-text">
                 <p><b>Contacto</b></p>
@@ -76,8 +66,9 @@
                 </div>
                 <div class="footer-text-icons">
                     <i class="fa fa-paperclip"></i>
-                    <a href="enlaces.html" title="Ir a la pagina de enlaces"><p>Pagina de enlaces</p></a>
+                    <a href="index.html" title="Ir a la de inicio"><p>Pagina de inicio</p></a>
             </div>
+
             </div>
             &copy; Sergio Ramos Cordero 2024
         </footer>
