--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 
             <section>
             <h2>Noticas Actuales</h2>
-            <p>asdasd</p>
-            </section>  
+            <a href="https://www.mundodeportivo.com/futbol/atletico-madrid">.</a>
+            <a href="https://www.marca.com/futbol/atletico.html">.</a>
+
+        </section>  
             
         </main>
 
