--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
+<!-- Marcado JSON-LD generado por el Asistente para el marcado de datos estructurados de Google. -->
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "name": "Club Atlético de Madrid",
+      "author": {
+        "@type": "Person",
+        "name": "Sergio Ramos Cordero"
+      },
+      "image": "https://seeergiio.github.io/",
+      "articleSection": "Otra forma de ver la vida"
+    }
+    </script>
 
 </head>
 <body>
@@ -47,9 +60,7 @@
 
             <section>
             <h2>Noticas Actuales</h2>
-            <a href="https://www.mundodeportivo.com/futbol/atletico-madrid">.</a>
-            <a href="https://www.marca.com/futbol/atletico.html">.</a>
-            <a href="https://atleticodemadrid.raulsergio.com/">.</a>
+            <img src="imagenes/fondo-atleticodemadrid.webp" alt="" width="60%">
         </section>  
             
         </main>
