--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         "@type": "Person",
         "name": "Sergio Ramos Cordero"
       },
-      "image": "https://seeergiio.github.io/",
+      "image": "https://seeergiio.github.io/imagenes/fondo-atleticodemadrid.webp",
       "articleSection": "Otra forma de ver la vida"
     }
     </script>
@@ -60,7 +60,6 @@
 
             <section>
             <h2>Noticas Actuales</h2>
-            <img src="imagenes/fondo-atleticodemadrid.webp" alt="" width="60%">
         </section>  
             
         </main>
