--- a/historia/historia.html
+++ b/historia/historia.html
@@ -25,17 +25,35 @@
 
             <header>
                 <nav class="navegacion">
-                    <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="fundacion.html" title="Ir al apartador de partidos">Fundacion</a>
-                    <a href="trofeos.html" title="Ir al apartador del equipo masculino">Trofeos</a>
-                    <a href="leyenda/leyendas.html" title="Ir al apartador del equipo femenino">leyendas</a>
+                    <a href="../index.html" title="Ir a la pagina de inicio">Inicio</a>
+                    <div class="menu-desple">
+                        <a href="historia.html" title="Ir al apartador de historia">Historia</a>
+                        <div class="menu-desple-contenido">
+                            <a href="fundacion.html" title="Ir al apartador de fundacion">Fundacion</a>
+                            <a href="trofeos.html" title="Ir al apartador de trofeos">Trofeos</a>
+                            <div class="menu-desple-2">
+                                <a href="leyenda/leyendas.html" title="Ir al apartador de leyendas">Leyendas</a>
+                                <div class="menu-desple-contenido">
+                                    <a href="leyenda/directiva.html" title="Ir al apartador de directiva">Directiva</a>
+                                    <a href="leyenda/entrenadores.html" title="Ir al apartador de entrenadores">Entenadores</a>
+                                    <a href="leyenda/jugadores.html" title="Ir al apartador de jugadores">Jugadores</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="../equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
+                    <a href="../equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
+                    <a href="../academia.html" title="Ir al apartador de la academia">Academia</a>
                 </nav>
-                <h2 class="title-pag">PROXIMAMENTE</h2>
+                <h2 class="title-pag">HISTORIA</h2>
         </div>
         </header>
         <main>
             <section>
                 <article>
+                    <div class="video-historia">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2X8CPY_F5qM?si=kR0aNMhSeY9Nzd1s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
                 </article>
             </section>  
             
