--- a/historia/leyenda/jugadores.html
+++ b/historia/leyenda/jugadores.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
+    <script type="application/ld+json" src="ruta1.js"></script>
 
 
 </head>
@@ -24,13 +24,27 @@
         <div class="overlay">
 
             <header>
-                <!-- <nav class="navegacion">
-                    <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="partidos.html" title="Ir al apartador de partidos">Partidos</a>
-                    <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
-                    <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
-                    <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
-                </nav> -->
+                <nav class="navegacion">
+                    <a href="../../index.html" title="Ir a la pagina de inicio">Inicio</a>
+                    <div class="menu-desple">
+                        <a href="../../historia/historia.html" title="Ir al apartador de historia">Historia</a>
+                        <div class="menu-desple-contenido">
+                            <a href="../../historia/fundacion.html" title="Ir al apartador de fundacion">Fundacion</a>
+                            <a href="../../historia/trofeos.html" title="Ir al apartador de trofeos">Trofeos</a>
+                            <div class="menu-desple-2">
+                                <a href="leyendas.html" title="Ir al apartador de leyendas">Leyendas</a>
+                                <div class="menu-desple-contenido">
+                                    <a href="directiva.html" title="Ir al apartador de directiva">Directiva</a>
+                                    <a href="entrenadores.html" title="Ir al apartador de entrenadores">Entenadores</a>
+                                    <a href="jugadores.html" title="Ir al apartador de jugadores">Jugadores</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="../../equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
+                    <a href="../../equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
+                    <a href="../../academia.html" title="Ir al apartador de la academia">Academia</a>
+                </nav>
                 <h2 class="title-pag">PROXIMAMENTE</h2>
         </div>
         </header>
