--- a/index.html
+++ b/index.html
@@ -23,45 +23,47 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <!-- Marcado JSON-LD generado por el Asistente para el marcado de datos estructurados de Google. -->
-    <script type="application/ld+json">
-    {
-      "@context": "http://schema.org",
-      "@type": "Article",
-      "name": "Club Atlético de Madrid",
-      "author": {
-        "@type": "Person",
-        "name": "Sergio Ramos Cordero"
-      },
-      "image": "https://seeergiio.github.io/imagenes/fondo-atleticodemadrid.webp",
-      "articleSection": "Otra forma de ver la vida"
-    }
-    </script>
+<script type="application/ld+json" src="rutainicio.js"></script>
 
 </head>
 <body>
     <div class="contenedor-principal">
         <div class="overlay-principal">
-
             <header>
                 <nav class="navegacion">
                     <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="historia/historia.html" title="Ir al apartador de partidos">Historia</a>
+                    <div class="menu-desple">
+                        <a href="historia/historia.html" title="Ir al apartador de Historia">Historia</a>
+                    </div>
                     <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
                     <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
                     <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
                 </nav>
-                <div class="contenedor-nav">
+                <div class="contenedor-hearder">
                     <p class="centrado-sub">Otra forma de ver la vida</p>
                     <h1>Club Atlético de Madrid</h1>
                 </div>
         </div>
         </header>
         <main>
+            <section>   
+                <h2>Noticas Actuales</h2>
+                <div class="contenedor-noticias">
+                    <div class="noticia">
+                        <p>Rueda de prensa de Simeone tras el Atleti-Celta</p>
+                    </div>
+                    <div class="noticia">
+                        <p>El FC Barcelona será nuestro rival en semifinales de la Copa del Rey</p>
+                    </div>
+                    <div class="noticia">
+                        <p>El Juvenil A se medirá al Salzburgo en octavos de la Youth League</p>
+                    </div>
+                    <div class="noticia">
+                        <p>El martes conoceremos a nuestro rival en la semifinal de la Copa de la Reina</p>
+                    </div>
 
-            <section>
-            <h2>Noticas Actuales</h2>
-        </section>  
-            
+                </div>
+            </section>  
         </main>
 
         <footer>
