--- a/equipo-masculino.html
+++ b/equipo-masculino.html
@@ -26,7 +26,7 @@
             <header>
                 <nav class="navegacion">
                     <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="partidos.html" title="Ir al apartador de partidos">Partidos</a>
+                    <a href="historia/historia.html" title="Ir al apartador de historia">Historia</a>
                     <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
                     <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
                     <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
