--- a/historia/fundacion.html
+++ b/historia/fundacion.html
@@ -24,13 +24,27 @@
         <div class="overlay">
 
             <header>
-                <!-- <nav class="navegacion">
-                    <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="partidos.html" title="Ir al apartador de partidos">Partidos</a>
-                    <a href="equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
-                    <a href="equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
-                    <a href="academia.html" title="Ir al apartador de la academia">Academia</a>
-                </nav> -->
+                <nav class="navegacion">
+                    <a href="../index.html" title="Ir a la pagina de inicio">Inicio</a>
+                    <div class="menu-desple">
+                        <a href="historia.html" title="Ir al apartador de historia">Historia</a>
+                        <div class="menu-desple-contenido">
+                            <a href="fundacion.html" title="Ir al apartador de fundacion">Fundacion</a>
+                            <a href="trofeos.html" title="Ir al apartador de trofeos">Trofeos</a>
+                            <div class="menu-desple-2">
+                                <a href="leyenda/leyendas.html" title="Ir al apartador de leyendas">Leyendas</a>
+                                <div class="menu-desple-contenido">
+                                    <a href="leyenda/directiva.html" title="Ir al apartador de directiva">Directiva</a>
+                                    <a href="leyenda/entrenadores.html" title="Ir al apartador de entrenadores">Entenadores</a>
+                                    <a href="leyenda/jugadores.html" title="Ir al apartador de jugadores">Jugadores</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="../equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
+                    <a href="../equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
+                    <a href="../academia.html" title="Ir al apartador de la academia">Academia</a>
+                </nav>
                 <h2 class="title-pag">PROXIMAMENTE</h2>
         </div>
         </header>
