--- a/historia/leyenda/leyendas.html
+++ b/historia/leyenda/leyendas.html
@@ -25,10 +25,26 @@
 
             <header>
                 <nav class="navegacion">
-                    <a href="index.html" title="Ir a la pagina de inicio">Inicio</a>
-                    <a href="directiva.html" title="Ir al apartador de partidos">Directiva</a>
-                    <a href="entrenadores.html" title="Ir al apartador del equipo masculino">Entrenadores</a>
-                    <a href="jugadores.html" title="Ir al apartador del equipo femenino">Jugadores</a>                </nav>
+                    <a href="../../index.html" title="Ir a la pagina de inicio">Inicio</a>
+                    <div class="menu-desple">
+                        <a href="../../historia/historia.html" title="Ir al apartador de historia">Historia</a>
+                        <div class="menu-desple-contenido">
+                            <a href="../../historia/fundacion.html" title="Ir al apartador de fundacion">Fundacion</a>
+                            <a href="../../historia/trofeos.html" title="Ir al apartador de trofeos">Trofeos</a>
+                            <div class="menu-desple-2">
+                                <a href="leyendas.html" title="Ir al apartador de leyendas">Leyendas</a>
+                                <div class="menu-desple-contenido">
+                                    <a href="directiva.html" title="Ir al apartador de directiva">Directiva</a>
+                                    <a href="entrenadores.html" title="Ir al apartador de entrenadores">Entenadores</a>
+                                    <a href="jugadores.html" title="Ir al apartador de jugadores">Jugadores</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="../../equipo-masculino.html" title="Ir al apartador del equipo masculino">Equipo Masculino</a>
+                    <a href="../../equipo-femenino.html" title="Ir al apartador del equipo femenino">Equipo Femenino</a>
+                    <a href="../../academia.html" title="Ir al apartador de la academia">Academia</a>
+                </nav>
                 <h2 class="title-pag">PROXIMAMENTE</h2>
         </div>
         </header>
