--- a/enlaces.html
+++ b/enlaces.html
@@ -67,9 +67,7 @@
                             <a href="https://victorgarv.github.io/" title="Ir a la pagina del celta"><img src="imagenes/enlace6.webp" alt="Es una imagen de una portada de una paginas sobre el "></a> 
                         </div>
                         <div class="pag-enlace">
-                            <h3>PROXIMAMENTE</h3>
-
-                        </div>
+                            <h3>Guia Anime</h3>
                         <div class="pag-enlace">
                             <h3>PROXIMAMENTE</h3>
 
