--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 <!-- Marcado JSON-LD generado por el Asistente para el marcado de datos estructurados de Google. -->
 <script type="application/ld+json" src="rutainicio.js"></script>
 
@@ -43,8 +42,8 @@
                     <p class="centrado-sub">Otra forma de ver la vida</p>
                     <h1>Club Atlético de Madrid</h1>
                 </div>
+            </header>
         </div>
-        </header>
         <main>
             <section>   
                 <h2>Noticas Actuales</h2>
@@ -61,7 +60,6 @@
                     <div class="noticia">
                         <p>El martes conoceremos a nuestro rival en la semifinal de la Copa de la Reina</p>
                     </div>
-
                 </div>
             </section>  
         </main>
@@ -69,27 +67,26 @@
         <footer>
             <h2>Coraje y Corazón</h2>
             <div class="footer-icons">
-                <a href="https://x.com/Atleti" title="Ir al Twitter Oficial"><i class="fa fa-twitter"></a></i>
-                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir a la pagina de Facebook Oficial"><i class="fa fa-facebook"></a></i>
-                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram Oficial"><i class="fa fa-instagram"></i></a></i>
-                <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube Oficial"><i class="fa fa-youtube-play"></a></i>
+                <a href="https://x.com/Atleti" title="Ir al Twitter Oficial"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir a la pagina de Facebook Oficial"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram Oficial"><i class="fa fa-instagram"></i></i></a>
+                <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube Oficial"><i class="fa fa-youtube-play"></i></a>
             </div>
             <div class="footer-text">
                 <p><b>Contacto</b></p>
                 <div class="footer-text-icons">
-                        <i class="fa fa-map-marker"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fd6a6a" d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
                         <p>Avenida Luis Aragonés, 4 28022 Madrid</p>
                 </div>
                 <div class="footer-text-icons">
-                        <i class="fa fa-phone" aria-hidden="true"></i>                
-                        <p>91 726 04 03</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fd6a6a" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg>                        <p>91 726 04 03</p>
                 </div>
                 <div class="footer-text-icons">
-                        <i class="fa fa-envelope"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fd6a6a" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
                         <p>socios@atleticodemadrid.com</p>
                 </div>
                 <div class="footer-text-icons">
-                    <i class="fa fa-paperclip"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="18" width="27" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#fd6a6a" d="M364.2 83.8c-24.4-24.4-64-24.4-88.4 0l-184 184c-42.1 42.1-42.1 110.3 0 152.4s110.3 42.1 152.4 0l152-152c10.9-10.9 28.7-10.9 39.6 0s10.9 28.7 0 39.6l-152 152c-64 64-167.6 64-231.6 0s-64-167.6 0-231.6l184-184c46.3-46.3 121.3-46.3 167.6 0s46.3 121.3 0 167.6l-176 176c-28.6 28.6-75 28.6-103.6 0s-28.6-75 0-103.6l144-144c10.9-10.9 28.7-10.9 39.6 0s10.9 28.7 0 39.6l-144 144c-6.7 6.7-6.7 17.7 0 24.4s17.7 6.7 24.4 0l176-176c24.4-24.4 24.4-64 0-88.4z"/></svg>
                     <a href="enlaces.html" title="Ir a la pagina de enlaces"><p>Pagina de enlaces</p></a>
             </div>
             </div>
