--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="footer-icons">
                 <a href="https://x.com/Atleti" title="Ir al Twitter Oficial"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.facebook.com/AtleticodeMadrid/?locale=es_ES" title="Ir a la pagina de Facebook Oficial"><i class="fa fa-facebook"></i></a>
-                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram Oficial"><i class="fa fa-instagram"></i></i></a>
+                <a href="https://www.instagram.com/atleticodemadrid/" title="Ir al Instagram Oficial"><i class="fa fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@atleticodemadrid" title="Ir al canal de Youtube Oficial"><i class="fa fa-youtube-play"></i></a>
             </div>
             <div class="footer-text">
