--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <main>
             <section>   
-                <h2>Noticas Actuales</h2>
+                <h2>Noticias Actuales</h2>
                 <div class="contenedor-noticias">
                     <div class="noticia">
                         <p>Rueda de prensa de Simeone tras el Atleti-Celta</p>
