--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
     <title>Atletico de Madrid</title>
     <link rel="icon" href="favicon.png" type="image/png">
 <!-- Marcado JSON-LD generado por el Asistente para el marcado de datos estructurados de Google. -->
-<script type="application/ld+json" src="rutainicio.js"></script>
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "Article",
+    "name": "Club Atlético de Madrid",
+    "author": {
+      "@type": "Person",
+      "name": "Sergio Ramos Cordero"
+    },
+    "image": "https://seeergiio.github.io/imagenes/fondo-atleticodemadrid.webp",
+    "articleSection": "Otra forma de ver la vida"
+  }
+  </script>
 
 </head>
 <body>
